--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <title>授权登录</title>
 </head>
 <body>
-    <form action="auth_waf" method="post">
+    <form action="waf_auth" method="post">
     用户名:<input name="user"><br>
     密码:<input name="pwd"><br>
         <input type="button" value="登录">
